# DeepInterview

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  README.vi.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vercel.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
apps/agent/: AGENTS.md  Dockerfile  package.json  pyproject.toml
apps/agent/src/deepinterview_agent/: app.py  shared_models.py  worker.py  worker_coach.py
apps/agent/src/deepinterview_agent/api/: __init__.py  coach.py  kb.py  prep.py  score.py  session.py  views.py
apps/agent/src/deepinterview_agent/coach/: __init__.py  prompts.py
apps/agent/src/deepinterview_agent/core/: __init__.py  config.py  deps.py  logging.py  observability.py  validation.py
apps/agent/src/deepinterview_agent/core/adapters/: __init__.py  base.py  embeddings.py  knowledge.py  llm.py  mock.py  search.py
apps/agent/src/deepinterview_agent/core/persistence/: __init__.py  repository.py
apps/agent/src/deepinterview_agent/live/: __init__.py  coach_agent.py  director.py  guard.py  handoffs.py  interviewer.py  kb_tool.py  state.py
apps/agent/src/deepinterview_agent/post/: __init__.py  evaluator.py  language_coach.py  prompts.py  report.py  verifier.py
apps/agent/src/deepinterview_agent/prep/: __init__.py  cv_extract.py  graph.py  nodes.py  prompts.py  state.py
apps/agent/src/deepinterview_agent/skilllib/: __init__.py  distiller.py  models.py  promote.py  scrub.py  store.py
apps/agent/tests/: conftest.py  test_adapters.py  test_adaptive.py  test_app.py  test_coach.py  test_coach_api.py  test_cv_extract.py  test_guard.py  test_kb_api.py  test_knowledge.py  test_live.py  test_llm_json.py  test_parity.py  test_prep.py  test_report_regression.py  test_repository.py  test_roundtrip.py  test_score.py  test_session_view.py  test_skilllib.py  test_validation.py  test_verifier.py  test_voice_coach.py  test_worker_livekit.py
apps/web/: Dockerfile  instrumentation.ts  middleware.ts  next.config.ts  package.json  proxy.ts
apps/web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
apps/web/components/: language-toggle.tsx
apps/web/lib/: api.ts  billing-server.ts  billing.ts  env.ts  (+12 more)
assets/: README.md
cli/: package.json  tsconfig.json
cli/src/: index.ts
docs/: ARCHITECTURE.md  DEPLOY.md  GOOD_FIRST_ISSUES.md
packaging/: README.md
scripts/: README.md  setup.sh
scripts/veo/: README.md  prompts.ts  render.mjs
services/lightrag/: Dockerfile  README.md  pyproject.toml
services/lightrag/src/lightrag_service/: __init__.py  app.py  backend.py  models.py
services/lightrag/tests/: test_kb.py
skills/: README.md  SCHEMA.md  example-corp-backend-senior.md
skills/_review/: README.md
supabase/: README.md
supabase/migrations/: 0001_init.sql  0002_billing.sql  0003_prep_progress.sql  0004_coach_transcript.sql
tests/: README.md
(+80 files in other folders)
